menu + fragmento de añadir
Se crea el menu
Se añaden fragmentos de prueba

--- a/StockNFC/app/src/main/res/values/strings.xml
+++ b/StockNFC/app/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="consultarProductos">Consultar Productos</string>
+    <string name="stock">Administrar Stock</string>
+    <string name="configuracion">Configuracion</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="fragmento_1_titulo">Fragmento 1</string>
+    <string name="info">Informacion general</string>
 </resources>
