--- a/StockNFC/app/src/main/res/values/strings.xml
+++ b/StockNFC/app/src/main/res/values/strings.xml
@@ -13,4 +13,24 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragmento_1_titulo">Fragmento 1</string>
     <string name="info">Informacion general</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="usuarioTxt">Usuario</string>
+    <string name="passTxt">Contraseña</string>
+    <string name="registrar">Registrar</string>
+    <string name="registroTxt">Registro de usuario</string>
+    <string name="emailTxt">Email</string>
+    <string name="rolTxt">Rol</string>
 </resources>
