Solucionados problemas varios
-Tamaño de los cardViews
-Click en el listado (sin cambiar de fragmento)
-Añadido el id al cardView
-Modificado icono usuario
-Eliminada sombra cardView
-Añadidos colores
-Precio N/A cardView

--- a/StockNFC/app/src/main/res/values/strings.xml
+++ b/StockNFC/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="borrar">Borrar</string>
     <string name="modificar">Modificar</string>
     <string name="atras">Atras</string>
+    <string name="listaArticulos">Listado de Productos</string>
 </resources>
