--- a/StockNFC/app/src/main/res/values/strings.xml
+++ b/StockNFC/app/src/main/res/values/strings.xml
@@ -56,4 +56,11 @@
     <string name="escrituraCorrecta">Escritura correcta</string>
     <string name="errorArticulo">No se puede guardar el artículo</string>
     <string name="title_activity_escritura_nfc">EscrituraNFCActivity</string>
+    <string name="title_activity_control_stock">ControlStockActivity</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">Hello Square World!</string>
+    <string name="infoControlStock">Seleccione el número de unidades vendidas.</string>
 </resources>
