--- a/StockNFC/app/src/main/res/values/strings.xml
+++ b/StockNFC/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="consultarProductos">Consultar Productos</string>
     <string name="stock">Administrar Stock</string>
-    <string name="configuracion">Configuracion</string>
+    <string name="configuracion">Configuración</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
@@ -63,4 +63,8 @@
     -->
     <string name="hello_world">Hello Square World!</string>
     <string name="infoControlStock">Seleccione el número de unidades vendidas.</string>
+    <string name="realizarPedido">Pedidos</string>
+    <string name="anhadirUsuario">Añadir Usuario</string>
+    <string name="alertasStock">Gestion de Alertas</string>
+    <string name="cerrarSesion">Cerrar Sesión</string>
 </resources>
